<resources>
    <string name="app_name">ArquitecturaMVPBase</string>
    <string name="product_name">Nombre</string>
    <string name="product_description">Descripcion</string>
    <string name="product_quantity">Cantidad</string>
    <string name="product_price">Precio</string>
    <string name="loading_message">Cargando...</string>
    <string name="product_creat">CREAR</string>
    <string name="new_product_ok">Producto Creado...</string>
    <string name="validate_internet">Error de conexión. Volver a intentar?</string>
    <string name="success_deleted">Borrado Exitoso</string>
    <string name="error_deleted">Error Borrando. Volver a intentar?</string>
    <string name="error">ERROR!!!</string>
    <string name="error_retrofit">ERROR RETROFIT</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="success_updated">Actualizacion Exitosa</string>
    <string name="error_updated">Error al actualizar. Volver a intentar?</string>
    <string name="success_created">Creado Exitoso</string>
    <string name="error_created">Error al crear</string>
    <string name="customer_name">Nombre</string>
    <string name="customer_surname">Apellido</string>
    <string name="new_customer_phonelisttitle">Lista de Telefonos</string>
    <string name="customer_phonedescription">Descripcion</string>
    <string name="customer_phonenumber">Número</string>
    <string name="new_customer_coordinatestitle">Coordenadas</string>
    <string name="customer_coordx">X</string>
    <string name="customer_coordy">Y</string>
    <string name="new_customer_btnCreate">Crear Cliente</string>
    <string name="alert">Advertencia</string>
    <string name="main_product_title">Empanadas</string>
    <string name="main_customers_title">Clientes</string>
    <string name="new_customer_title">Nuevo Cliente</string>
    <string name="init_process_offline">Se realizará el proceso fuera de línea</string>
    <string name="warning">Advertencia</string>
    <string name="validate_internet_warning_init_offline">En el momento no hay servicio de internet, desea realizar el proceso fuera de línea?</string>
    <string name="product_local_message">Cargar Productos Locales?</string>
    <string name="product_get_local_error">Error cargando los datos locales</string>
    <string name="new_product_error">Error creando el producto</string>
    <string name="product_sync_hint">Sincronizado</string>
    <string name="login_edittext_user_hint">Email</string>
    <string name="login_edittext_password_hint">Password</string>
    <string name="login_btn_signin_hint">Ingresar</string>
    <string name="products_tab1_name">Productos</string>
    <string name="products_tab2_name">Clientes</string>
    <string name="products_tab3_name">Perfil</string>


    <string name="btnName">Enviar a Spinner</string>
    <string name="btnNameTwo">Enviar A Perfiil</string>
    <string name="str_show_name">Nombre</string>
    <string name="txt_v1_relative">Texto1 Relative</string>
    <string name="hint_relative1">Hint Relative</string>
    <string name="txtEmailRelative">Email</string>
    <string name="txtactivity_perfil_username">\@Draiven</string>
    <string name="activity_perfil_like">1000 Likes</string>
    <string name="activity_perfil_followers">300 Followers</string>
    <string name="activity_perfil_following">20 Following</string>
    <string name="activity_perfil_notifications">Notifications</string>
    <string name="activity_perfil_sync">Sync With</string>
    <string name="activity_perfil_btn_name">Close Session</string>
    <string name="close_session">Cerrar sesión</string>

    <string-array name="animals_array">
        <item>Leon</item>
        <item>Burra</item>
        <item>Tortuga</item>
        <item>Tiburón</item>
        <item>Buho</item>
        <item>Oso</item>

    </string-array>

    <string-array name="sync_with_array">
        <item>Select...</item>
        <item>Facebook</item>
        <item>Git</item>
        <item>Google</item>
        <item>Twitter</item>


    </string-array>
    <string name="title_activity_customer_locations">Map</string>

</resources>
