<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_padding"
    android:layout_margin="@dimen/default_margin"
    tools:context="co.com.etn.arquitecturamvpbase.view.activity.NewCustomerActivity">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/new_customer_title"
    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
    android:textStyle="bold"
    android:gravity="center"
    />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_customer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_name"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_customer_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_surname"
            />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_customer_phonelisttitle"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_customer_phonedescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_phonedescription"
            />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <android.support.design.widget.TextInputEditText
        android:id="@+id/new_customer_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/customer_phonenumber"
        />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_customer_coordinatestitle"


        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="10"
    >
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"

        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_customer_coordx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_coordx"
            />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_customer_coordy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_coordy"
            />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_customer_btnCreate"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:onClick="addCustomer"
        android:textAllCaps="false"
        />



</LinearLayout>
