<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="co.com.etn.arquitecturamvpbase.view.activity.NewProductActivity">



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <android.support.design.widget.TextInputEditText
                android:id="@+id/new_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name"
            />

    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/new_product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_description"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/new_product_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_quantity"
                android:inputType="number"
                />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_price"
            android:inputType="number"
            />
    </android.support.design.widget.TextInputLayout>


     <Button
         android:id="@+id/new_product_create"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/product_creat"
         android:background="@color/colorPrimaryDark"
         android:textColor="@android:color/white"
         android:onClick="createNewProduct"
         android:theme="@style/ButtonDisabled"
         style="@style/Widget.AppCompat.Button.Colored"



         />



</LinearLayout>
