<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="co.com.etn.arquitecturamvpbase.view.activity.LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_edittext_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_edittext_user_hint"
            android:inputType="textEmailAddress"
            android:drawablePadding="5dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_text_input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_edittext_password"
            android:hint="@string/login_edittext_password_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:drawablePadding="5dp"
            android:inputType="numberPassword"
            android:imeActionId="@+id/login"
            android:textColor="@color/colorPrimary"




            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:text="@string/login_btn_signin_hint"
            android:layout_gravity="end"
            android:onClick="login"

            />
    </android.support.design.widget.TextInputLayout>




</LinearLayout>
