<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="0.4"
            android:layout_gravity="center_horizontal"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/empanada2"
                />



        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            >

            <TextView
                android:id="@+id/product_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/product_detail_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_alignParentEnd="true"

                />



            <TextView
                android:id="@+id/product_detail_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_description"
                android:layout_below="@id/product_detail_name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                />


            <TextView
                android:id="@+id/product_detail_description_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_description"
                android:layout_below="@id/product_detail_name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                />
            <TextView
                android:id="@+id/product_detail_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_quantity"
                android:layout_below="@id/product_detail_description"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/product_detail_quantity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_quantity"
                android:layout_below="@id/product_detail_description"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                />

            <TextView
                android:id="@+id/product_detail_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_price"
                android:layout_below="@id/product_detail_quantity"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/product_detail_price_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_price"
                android:layout_below="@id/product_detail_quantity"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                />



        </RelativeLayout>


    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabDeleteProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        app:srcCompat="@drawable/ic_delete_forever_black_24dp"
        android:onClick="deleteProduct"
        android:layout_margin="@dimen/product_new_add_margin"
        tools:ignore="VectorDrawableCompat" />

</android.support.design.widget.CoordinatorLayout>
